# django-sftp

./: .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  codecov.yml  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: codeql-analysis.yml  constraints.txt  coverage.yml  docs.yml  release-drafter.yml  release.yml  test-pypi.yml  tests.yml
django_sftp/: __init__.py  filesystem.py  server.py
docs/: conf.py  contributing.rst  index.rst  installation.rst  reference.rst  usage.rst
example/: README.md
example/example/: settings.py
src/django_sftp/: __init__.py  __main__.py  admin.py  apps.py  compat.py  filesystem.py  interface.py  mixins.py  models.py  server.py
src/django_sftp/management/commands/: createsftpuseraccount.py  createsftpusergroup.py  sftpserver.py
src/django_sftp/migrations/: 0001_initial.py
tests/: __init__.py  settings.py  test_filesystem.py  test_main.py  test_manage.py  test_models.py  urls.py
tests/django_project/project/: asgi.py  settings.py  urls.py  wsgi.py
tests/project/project/: settings.py
