[tool.poetry]
name = "django-sftp"
version = "0.2.0"
description = "Django SFTP"
authors = ["Alex Vakhitov <alex@vakhitov.dev>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/vahaah/django-sftp"
repository = "https://github.com/vahaah/django-sftp"
documentation = "https://django-sftp.readthedocs.io"

[tool.poetry.urls]
Changelog = "https://github.com/vahaah/django-sftp/releases"

[tool.poetry.dependencies]
python = "^3.6.1"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.9.0"
safety = "^1.9.0"
mypy = "^0.780"
typeguard = "^2.9.1"
xdoctest = "^0.12.0"
sphinx = "^3.0.4"
sphinx-autobuild = "^0.7.1"
pre-commit = "^2.5.1"
django = "^3.0.7"
paramiko = "^2.7.1"
pylint = "^2.5.3"
black = "^19.10b0"
bandit = "^1.6.2"
flake8 = "^3.8.2"

[tool.poetry.scripts]
django-sftp = "django_sftp.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["django_sftp"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
