[tool.poetry]
name = "django-sftp"
version = "0.2.0"
description = "Django SFTP"
authors = ["Alex Vakhitov <alex@vakhitov.dev>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/vahaah/django-sftp"
repository = "https://github.com/vahaah/django-sftp"
documentation = "https://django-sftp.readthedocs.io"

[tool.poetry.urls]
Changelog = "https://github.com/vahaah/django-sftp/releases"

[tool.poetry.dependencies]
python = "^3.6.1"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
coverage = {extras = ["toml"], version = "^5.2"}
pytest-cov = "^2.10.0"
safety = "^1.9.0"
mypy = "^0.782"
typeguard = "^2.9.1"
xdoctest = "^0.14.0"
sphinx = "^3.1.2"
sphinx-autobuild = "^0.7.1"
pre-commit = "^2.7.1"
django = "^3.0.8"
paramiko = "^2.7.2"
pylint = "^2.6.0"
black = "^20.8b1"
bandit = "^1.6.2"
flake8 = "^3.8.3"

[tool.poetry.scripts]
django-sftp = "django_sftp.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["django_sftp"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
