[tool.poetry]
authors = ["Alex Vakhitov <alex@vakhitov.dev>"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Django :: 2.1",
  "Framework :: Django :: 2.2",
  "Framework :: Django :: 3.0",
  "Framework :: Django :: 3.1",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]
description = "Django SFTP"
documentation = "https://django-sftp.readthedocs.io"
homepage = "https://github.com/vahaah/django-sftp"
license = "MIT"
name = "django-sftp"
readme = "README.md"
repository = "https://github.com/vahaah/django-sftp"
version = "0.2.2"

[tool.poetry.urls]
Changelog = "https://github.com/vahaah/django-sftp/releases"

[tool.poetry.dependencies]
asyncssh = "^2.5.0"
click = "^7.0"
python = ">=3.7,<4.0.0"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
black = "^20.8b1"
coverage = {extras = ["toml"], version = "^5.3"}
django = "^3.2.16"
flake8 = "^3.8.4"
ipython = "^7.18.1"
mypy = "^0.782"
nox = "^2020.8.22"
pre-commit = "^2.7.1"
pylint = "^2.6.0"
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
safety = "^1.9.0"
sphinx = "^3.2.1"
sphinx-autobuild = "^2020.9.1"
typeguard = "^2.9.1"
xdoctest = "^0.15.0"
pytest-django = "^4.1.0"
pytest-pythonpath = "^0.7.3"
django-stubs = "^1.6.0"
pytest-mock = "^3.5.0"
flake8-black = "^0.2.1"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^20.11.1"
flake8-bandit = "^2.1.2"
flake8-annotations = "^2.5.0"
flake8-docstrings = "^1.5.0"
darglint = "^1.5.8"
sphinx-autodoc-typehints = "^1.11.1"
codecov = "^2.1.11"

[tool.poetry.scripts]
django-sftp = "django_sftp.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["django_sftp"]

[tool.coverage.report]
fail_under = 50
show_missing = true

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
